# Q-Haskell

./: CHANGELOG.md  Gates.hs  Q-Haskell.cabal  README.md
